[package]
name = "classicube-blockref-plugin"
version = "0.1.0"
authors = ["SpiralP <spiral.palmer@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
classicube-helpers = { git = "https://github.com/SpiralP/rust-classicube-helpers.git"}
classicube-sys = { git = "https://github.com/SpiralP/rust-classicube-sys.git" }
error-chain = "0.12.2"
notify = "4.0.15"
rand = "0.7.3"
rand_chacha = "0.2.2"
